chore: remove branding for neutral demo

--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <title>Demo Catalog Lite</title>
+    <title>Demo Catalog</title>
     <link rel="stylesheet" href="style.css?v=20260222-1" />
   </head>
   <body>
     <header class="header">
       <div class="header-brand">
         <div class="brand-logo-line">
-          <span class="brand-apple"></span>
-          <span class="brand-name">BIG TECHNO</span>
+          <span class="brand-name">DEMO CATALOG</span>
         </div>
-        <div id="headerAddress" class="header-address">📍 Москва, ул Барклая 8, 124 павильон</div>
+        <div id="headerAddress" class="header-address">📍 Адрес магазина</div>
       </div>
       <div class="header-actions">
-        <button class="header-cta" data-screen="production" type="button">О проекте</button>
+        <button class="header-cta" data-screen="production" type="button">Информация</button>
       </div>
     </header>
 
