Open manager chat @XPERCHIKX from profile button

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             </button>
           </div>
         </div>
-        <button class="profile-manager-button" data-screen="contacts" type="button">
+        <button id="profileManagerButton" class="profile-manager-button" type="button">
           <span>💬</span>
           <span>
             <strong>Написать менеджеру</strong><br />
@@ -428,6 +428,6 @@
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="telegram.js?v=20260221-1"></script>
-    <script src="app.js?v=20260223-4"></script>
+    <script src="app.js?v=20260223-5"></script>
   </body>
 </html>
