Refresh first-order promo banner visual and copy

--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
           <div class="home-banner-slider">
             <div id="homeBannerTrack" class="home-banner-track">
               <div class="featured-promo banner-slide banner-slide-promo">
-                <div class="featured-chip">Промокод</div>
+                <div class="featured-chip">Только для новых клиентов</div>
                 <div class="featured-title">-10% на первый заказ</div>
-                <div class="featured-text">Скидка по промокоду "ПЕРВЫЙ" для новых клиентов.</div>
+                <div class="featured-text">Введите промокод <strong>"ПЕРВЫЙ"</strong> и получите скидку на товары без акций.</div>
+                <div class="featured-cta">Активировать в корзине</div>
               </div>
               <div class="featured-promo info-hero banner-slide banner-slide-about">
                 <div class="featured-chip">О компании</div>
