Add home promo/popular ribbons and popularity scoring

--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
           </button>
         </div>
 
+        <div class="home-section-title">Акции</div>
+        <section class="promo-row promo-row-home">
+          <div id="promoTrack" class="promo-track"></div>
+        </section>
+
+        <div class="home-section-title">Популярные товары</div>
+        <section class="promo-row promo-row-home">
+          <div id="homePopularTrack" class="promo-track"></div>
+        </section>
+
       </section>
 
       <section id="screen-stores" class="screen">
@@ -441,6 +451,6 @@
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="telegram.js?v=20260223-2"></script>
-    <script src="app.js?v=20260223-7"></script>
+    <script src="app.js?v=20260223-8"></script>
   </body>
 </html>
