--- a/index.html
+++ b/index.html
@@ -185,8 +185,23 @@
             <span>Выбрать все</span>
           </label>
           <div class="select-actions">
-            <button id="favoritesToCart" class="icon-btn" aria-label="В корзину">+</button>
-            <button id="favoritesClear" class="icon-btn" aria-label="Удалить">×</button>
+            <button id="favoritesToCart" class="icon-btn" aria-label="В корзину">
+              <svg class="icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                <path d="m15 11-1 9" />
+                <path d="m19 11-4-7" />
+                <path d="M2 11h20" />
+                <path d="m3.5 11 1.6 7.4a2 2 0 0 0 2 1.6h9.8a2 2 0 0 0 2-1.6l1.7-7.4" />
+              </svg>
+            </button>
+            <button id="favoritesClear" class="icon-btn" aria-label="Удалить">
+              <svg class="icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                <path d="M3 6h18" />
+                <path d="M8 6V4h8v2" />
+                <path d="M6 6l1 14h10l1-14" />
+                <path d="M10 11v6" />
+                <path d="M14 11v6" />
+              </svg>
+            </button>
           </div>
         </div>
         <div id="favoritesList" class="product-list"></div>
@@ -202,7 +217,15 @@
             <span>Выбрать все</span>
           </label>
           <div class="select-actions">
-            <button id="cartRemoveSelected" class="icon-btn" aria-label="Удалить">×</button>
+            <button id="cartRemoveSelected" class="icon-btn" aria-label="Удалить">
+              <svg class="icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                <path d="M3 6h18" />
+                <path d="M8 6V4h8v2" />
+                <path d="M6 6l1 14h10l1-14" />
+                <path d="M10 11v6" />
+                <path d="M14 11v6" />
+              </svg>
+            </button>
           </div>
         </div>
         <div class="promo-input-row">
