Add payment placeholder screen on checkout submit

--- a/index.html
+++ b/index.html
@@ -277,6 +277,22 @@
         </div>
       </section>
 
+      <section id="screen-pay" class="screen">
+        <div class="screen-head confirmation-head">
+          <button class="back-button icon-only" data-back="checkout" aria-label="Назад">←</button>
+          <h2>Оплата</h2>
+        </div>
+        <div class="confirmation">
+          <div class="confirmation-icon" aria-hidden="true">₽</div>
+          <div class="confirmation-title">Тут будет оплата</div>
+          <p class="confirmation-text">Экран оплаты подключим на следующем шаге.</p>
+          <div class="confirmation-actions">
+            <button class="primary-button" data-screen="home">Вернуться в каталог</button>
+            <button class="ghost-button" data-screen="cart">Назад в корзину</button>
+          </div>
+        </div>
+      </section>
+
       <section id="screen-confirmation" class="screen">
         <div class="screen-head confirmation-head">
           <button class="back-button icon-only" data-back="home" aria-label="Назад">←</button>
